# onetagger

./: .gitignore  CHANGELOG.md  CUSTOM_PLATFORMS.md  Cargo.toml  README.md  compile-mac.sh  compile-nix.sh  package-lock.json
.cargo/: config  config.toml
.github/: FUNDING.yml
.github/workflows/: build.yml
android/: .gitignore  .metadata  build.sh  pubspec.yaml
android/android/: build.gradle
android/android/app/: build.gradle
android/android/app/src/main/: AndroidManifest.xml
android/android/app/src/main/java/eu/marekkon5/onetagger_android/: MainActivity.java
android/android/app/src/main/res/values-night-v31/: styles.xml
android/android/app/src/main/res/values-v31/: styles.xml
android/android/app/src/profile/: AndroidManifest.xml
android/lib/: api.dart  autotagger.dart  log.dart  main.dart  settings.dart  tagging_status.dart
android/onetagger-android/: Cargo.toml  build.rs
android/onetagger-android/src/: api.rs  lib.rs
assets/: compile-nix.sh  compile-win.py  icon.icns  installer.nsi  mac-cross.toml  spotify_callback.html
client/: .browserslistrc  .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vue.config.js
client/public/: index.html
client/src/: App.vue  main.js  main.ts
client/src/components/: AddAlbumArt.vue  AdvancedSettingsToggle.vue  AutotaggerAdvanced.vue  AutotaggerPlatformSpecific.vue  AutotaggerPlatforms.vue  AutotaggerProfile.vue  AutotaggerTags.vue  CliDialog.vue  DJAppIcons.vue  DevTools.vue  ExitDialog.vue  FolderBrowser.vue  HelpButton.vue  HelpRenamerExamples.vue  Keybind.vue  LogoText.vue  ManualTag.vue  PlatformsRepo.vue  PlayerBar.vue  PlaylistDropZone.vue  QuickTagContextMenu.vue  QuickTagFileBrowser.vue  QuickTagGenreBar.vue  QuickTagLeft.vue  QuickTagMoods.vue  QuickTagRight.vue  QuickTagTile.vue  QuickTagTileThin.vue  RenamerTokenName.vue  Separators.vue  Settings.vue  SpotifyLogin.vue  TagEditorAlbumArt.vue  TagField.vue  TagFields.vue  Wave.vue  Waveform.vue
client/src/js/: onetagger.js  quasar.js  quicktag.js  router.js  tags.js
client/src/scripts/: autotagger.ts  manualtag.ts  onetagger.ts  player.ts  quicktag.ts  router.ts  settings.ts  tags.ts  utils.ts
client/src/style/: app.scss  quasar.scss
client/src/styles/: app.scss  quasar.variables.scss  scrollbar.scss
client/src/views/: AudioFeatures.vue  AudioFeaturesStatus.vue  Autotagger.vue  AutotaggerAdvanced.vue  AutotaggerPlatform.vue  AutotaggerStatus.vue  AutotaggerTags.vue  Index.vue  QuickTag.vue  Renamer.vue  TagEditor.vue
crates/onetagger/: Cargo.toml  build.rs
crates/onetagger-autotag/: Cargo.toml
crates/onetagger-autotag/src/: audiofeatures.rs  lib.rs  platforms.rs  repo.rs  shazam.rs
crates/onetagger-cli/: Cargo.toml  build.rs
crates/onetagger-cli/src/: main.rs
crates/onetagger-platforms/: Cargo.toml
crates/onetagger-platforms/src/: bandcamp.rs  bandcamp_genres.rs  beatport.rs  beatsource.rs  bpmsupreme.rs  deezer.rs  discogs.rs  itunes.rs  junodownload.rs  lib.rs  musicbrainz.rs  musixmatch.rs  rateyourmusic.rs  spotify.rs  traxsource.rs
crates/onetagger-platforms/src/bandcamp/: discogs.txt  mod.rs  musicbrainz.txt
crates/onetagger-player/: Cargo.toml
crates/onetagger-player/src/: aiff.rs  alac.rs  flac.rs  lib.rs  mp3.rs  mp4.rs  ogg.rs  wav.rs
crates/onetagger-playlist/: Cargo.toml
crates/onetagger-playlist/src/: lib.rs
crates/onetagger-python/: Cargo.toml  build.rs
crates/onetagger-python-builder/: Cargo.toml  build.rs
crates/onetagger-python-builder/src/: lib.rs  main.rs
crates/onetagger-python/src/: docs.py  lib.rs  module.rs  subprocess.rs  util.py
crates/onetagger-renamer/: Cargo.toml
crates/onetagger-renamer/src/: ac.rs  docs.rs  lib.rs  parser.rs
crates/onetagger-shared/: Cargo.toml  build.rs
crates/onetagger-shared/src/: lib.rs
crates/onetagger-tag/: Cargo.toml
crates/onetagger-tag/src/: flac.rs  id3.rs  lib.rs  mp4.rs  vorbis.rs  wav.rs
crates/onetagger-tagger/: Cargo.toml
crates/onetagger-tagger/src/: custom.rs  lib.rs
crates/onetagger-ui/: Cargo.toml
crates/onetagger-ui/src/: browser.rs  lib.rs  main.rs  quicktag.rs  socket.rs  tageditor.rs  ui.rs
crates/onetagger/src/: browser.rs  main.rs  quicktag.rs  socket.rs  tageditor.rs  ui.rs
src/: build.rs  cli.rs  main.rs  test.rs
src/playlist/: mod.rs
src/tag/: flac.rs  id3.rs  mod.rs  mp4.rs
src/tagger/: beatport.rs  beatsource.rs  discogs.rs  helpers.rs  itunes.rs  junodownload.rs  matcher.rs  mod.rs  musicbrainz.rs  shazam.rs  spotify.rs  traxsource.rs
src/ui/: audiofeatures.rs  browser.rs  mod.rs  quicktag.rs  socket.rs  tageditor.rs
src/ui/player/: aiff.rs  alac.rs  flac.rs  mod.rs  mp3.rs  mp4.rs
