[workspace]
resolver = "2"
members = [
    "crates/onetagger",
     "crates/onetagger-ui",
    "crates/onetagger-cli",
    "crates/onetagger-tag",
    "crates/onetagger-shared",
    "crates/onetagger-player",
    "crates/onetagger-tagger",
    "crates/onetagger-python",
    "crates/onetagger-renamer",
    "crates/onetagger-autotag",
    "crates/onetagger-playlist",
    "crates/onetagger-platforms",
    "crates/onetagger-python-builder",
]

[profile.release]
opt-level = 3

# Required for MacOS (Python), waste for Linux
strip = false
