[workspace]
resolver = "2"
members = [
    "crates/onetagger",
    "crates/onetagger-ui",
    "crates/onetagger-cli",
    "crates/onetagger-tag",
    "crates/onetagger-shared",
    "crates/onetagger-player",
    "crates/onetagger-tagger",
    "crates/onetagger-renamer",
    "crates/onetagger-autotag",
    "crates/onetagger-playlist",
    "crates/onetagger-platforms"
]

# Workaround for MacOS
[workspace.dependencies]
lzma-sys = { version = "*", features = ["static"] }

[profile.release]
opt-level = 3
