[package]
name = "onetagger-android"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
anyhow = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
android_logger = "0.13"
crossbeam-channel = "0.5"
flutter_rust_bridge = "1.72"

serde = { version = "1.0", features = ["derive"] }

onetagger-tagger = { path = "../../crates/onetagger-tagger" }
onetagger-shared = { path = "../../crates/onetagger-shared" }
onetagger-autotag = { path = "../../crates/onetagger-autotag" }
onetagger-platforms = { path = "../../crates/onetagger-platforms" }


[profile.release]
opt-level = 'z'
strip = true