[package]
name = "onetagger-autotag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
rand = "0.8"
regex = "1.10"
dunce = "1.0"
image = "0.25"
anyhow = "1.0"
chrono = "0.4"
base64 = "0.22"
execute = "0.2"
walkdir = "2.5"
libloading = "0.8"
serde_json = "1.0"
lazy_static = "1.5"
crossbeam-channel = "0.5"

serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = [
    "json",
    "blocking",
    "rustls-tls",
], default-features = false }

songrec = { git = "https://github.com/Marekkon5/SongRec.git" }

onetagger-tag = { path = "../onetagger-tag" }
onetagger-tagger = { path = "../onetagger-tagger" }
onetagger-player = { path = "../onetagger-player" }
onetagger-shared = { path = "../onetagger-shared" }
onetagger-renamer = { path = "../onetagger-renamer" }
onetagger-platforms = { path = "../onetagger-platforms" }
