[package]
name = "onetagger-cli"
version = "1.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde_json = "1.0"
convert_case = "0.6"

clap = { version = "4.1", features = ["derive"] }

onetagger-tagger = { path = "../onetagger-tagger" }
onetagger-shared = { path = "../onetagger-shared" }
onetagger-autotag = { path = "../onetagger-autotag" }
onetagger-renamer = { path = "../onetagger-renamer" }
onetagger-platforms = { path = "../onetagger-platforms" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"