[package]
name = "onetagger-cli"
version = "1.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1.0"
serde_json = "1.0"
convert_case = "0.8"

clap = { version = "4.5", features = ["derive"] }

onetagger-ui = { path = "../onetagger-ui" }
onetagger-tagger = { path = "../onetagger-tagger" }
onetagger-shared = { path = "../onetagger-shared" }
onetagger-autotag = { path = "../onetagger-autotag" }
onetagger-renamer = { path = "../onetagger-renamer" }
onetagger-playlist = { path = "../onetagger-playlist" }
onetagger-platforms = { path = "../onetagger-platforms" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
