[package]
name = "onetagger-platforms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
url = "2.2"
rand = "0.8"
regex = "1.5"
rouille = "3.5"
scraper = "0.17"
serde_json = "1.0"
urlencoding = "2.1"
minify-html = "0.11"

serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"], default-features = false }
rspotify = { version = "0.11.4", features = ["client-ureq", "ureq-rustls-tls"], default-features = false }

onetagger-tag = { path = "../onetagger-tag" }
onetagger-shared = { path = "../onetagger-shared" }
onetagger-tagger = { path = "../onetagger-tagger" }