[package]
name = "onetagger-platforms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
url = "2.5"
rand = "0.9"
regex = "1.11"
anyhow = "1.0"
scraper = "0.23"
serde_json = "1.0"
minify-html = "0.16"

serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = [
    "json",
    "blocking",
    "rustls-tls",
], default-features = false }
rspotify = { version = "0.14", features = [
    "client-ureq",
    "ureq-rustls-tls",
], default-features = false }


onetagger-tag = { path = "../onetagger-tag" }
onetagger-shared = { path = "../onetagger-shared" }
onetagger-tagger = { path = "../onetagger-tagger" }
