[package]
name = "onetagger-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
alac = "0.5"
hound = "3.5"
anyhow = "1.0"
lofty = "0.17"
pacmog = "0.4.1"
mp4parse = "0.17"

rodio = { version = "0.17", features = ["symphonia-aac", "symphonia-isomp4", "symphonia-mp3"] }

onetagger-shared = { path = "../onetagger-shared" }

