[package]
name = "onetagger-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
alac = "0.5"
hound = "3.5"
lofty = "0.21"
anyhow = "1.0"
pacmog = "0.4.2"
mp4parse = "0.17"

rodio = { version = "0.19", features = ["symphonia-aac", "symphonia-isomp4", "symphonia-mp3"] }

