[package]
name = "onetagger-playlist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
base64 = "0.21"
urlencoding = "2.1"

serde = { version = "1.0", features = ["derive"] }
onetagger-tag = { path = "../onetagger-tag" }
onetagger-shared = { path = "../onetagger-shared" }