[package]
name = "onetagger-renamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pad = "0.1"
serde = { version = "1.0", features = ["derive"] }

onetagger-tagger = { path = "../onetagger-tagger" }
onetagger-autotag = { path = "../onetagger-autotag" }
