[package]
name = "onetagger-renamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pad = "0.1"
dunce = "1.0"
regex = "1.7"
lazy_static = "1.4"
pulldown-cmark = "0.9"

serde = { version = "1.0", features = ["derive"] }

onetagger-tag = { path = "../onetagger-tag" }
onetagger-tagger = { path = "../onetagger-tagger" }
onetagger-autotag = { path = "../onetagger-autotag" }
