[package]
name = "onetagger-shared"
version = "1.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
chrono = "0.4"
backtrace = "0.3"
crossterm = "0.24"
serde_json = "1.0"
directories = "4.0"

fern = { version = "0.6", features = ["colored"] }
serde = { version = "1.0", features = ["derive"] }