[package]
name = "onetagger-tag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"

log = { version = "0.4", optional = true }
id3 = { version = "1.3.0", optional = true }
riff = { version = "1.0", optional = true }
base64 = { version = "0.13", optional = true }
mp4ameta = { version = "0.11", optional = true }
metaflac = { version = "0.2.5", optional = true}

serde = { version = "1.0", features = ["derive"] }

[features]
default = ["tag"]
tag = ["id3", "mp4ameta", "metaflac", "base64", "log"]