[package]
name = "onetagger-tag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
anyhow = "1.0"

log = { version = "0.4", optional = true }
id3 = { version = "1.16.2", optional = true }
riff = { version = "2.0.0", optional = true }
lofty = { version = "0.22", optional = true }
base64 = { version = "0.22", optional = true }
mp4ameta = { version = "0.13", optional = true }
metaflac = { version = "0.2.8", optional = true }
once_cell = { version = "1.21", optional = true }

serde = { version = "1.0", features = ["derive"] }

[features]
default = ["tag"]
tag = [
    "id3",
    "mp4ameta",
    "metaflac",
    "base64",
    "log",
    "riff",
    "lofty",
    "once_cell",
]
