[package]
name = "onetagger-tagger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
regex = "1.7"
chrono = "0.4"
strsim = "0.10"
unidecode = "0.3"
serde_json = "1.0"

serde = { version = "1.0", features = ["derive"] }

onetagger-tag = { path = "../onetagger-tag", default-features = false }