[package]
name = "onetagger-tagger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
regex = "1.7"
anyhow = "1.0"
strsim = "0.10"
unidecode = "0.3"
serde_json = "1.0"

pyo3 = { version = "0.18", features = ["chrono", "serde", "anyhow"], optional = true }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
pythonize = { version = "0.18", optional = true }

onetagger-tag = { path = "../onetagger-tag", default-features = false }

[features]
default = []
python = ["pyo3", "pythonize", "onetagger-tag/python"]