[package]
name = "onetagger-ui"
version = "0.1.0"
edition = "2021"


[dependencies]
log = "0.4"
mime = "0.3"
dunce = "1.0"
trash = "4.0"
image = "0.25"
anyhow = "1.0"
opener = "0.6"
base64 = "0.22"
walkdir = "2.3"
tempfile = "3.3"
serde_json = "1.0"
webbrowser = "0.8"
mime_guess = "2.0"
urlencoding = "2.1"
include_dir = "0.7"
directories = "5.0"
tinyfiledialogs = "3.9"

axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35", features = ["rt-multi-thread"] }

onetagger-tag = { path = "../onetagger-tag" }
onetagger-python = { path = "../onetagger-python" }
onetagger-shared = { path = "../onetagger-shared" }
onetagger-tagger = { path = "../onetagger-tagger" }
onetagger-player = { path = "../onetagger-player" }
onetagger-autotag = { path = "../onetagger-autotag" }
onetagger-renamer = { path = "../onetagger-renamer" }
onetagger-playlist = { path = "../onetagger-playlist" }
onetagger-platforms = { path = "../onetagger-platforms" }

# Windows specific 
[target.'cfg(windows)'.dependencies]
sysinfo = "0.30"

