[package]
name = "onetagger"
version = "1.7.0"
edition = "2021"
description = "App to tag your music library."
keywords = ["gui", "audio"]
categories = ["multimedia::audio"]

[dependencies]
log = "0.4"
wry = "0.31"
mime = "0.3"
dunce = "1.0"
trash = "3.0"
image = "0.24"
opener = "0.6"
base64 = "0.21"
rouille = "3.6"
walkdir = "2.3"
tempfile = "3.3"
serde_json = "1.0"
webbrowser = "0.8"
mime_guess = "2.0"
urlencoding = "2.1"
include_dir = "0.7"
directories = "5.0"
tungstenite = "0.20"
tinyfiledialogs = "3.9"

clap = { version = "4.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

onetagger-tag = { path = "../onetagger-tag" }
onetagger-shared = { path = "../onetagger-shared" }
onetagger-tagger = { path = "../onetagger-tagger" }
onetagger-player = { path = "../onetagger-player" }
onetagger-autotag = { path = "../onetagger-autotag" }
onetagger-renamer = { path = "../onetagger-renamer" }
onetagger-playlist = { path = "../onetagger-playlist" }
onetagger-platforms = { path = "../onetagger-platforms" }

# Windows specific 
[target.'cfg(windows)'.dependencies]
sysinfo = "0.29"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

# MacOS specific
[target.'cfg(target_os = "macos")'.dependencies]
native-dialog = "0.6.3"


[package.metadata.bundle]
name = "OneTagger"
identifier = "com.marekkon5.onetagger"
icon = ["../../assets/32x32.png", "../../assets/128x128.png", "../../assets/128x128@2x.png", 
    "../../assets/icon.icns", "../../assets/icon.ico"]
version = "1.7.0"
resources = []
copyright = "Copyright (c) Marekkon5 2022. All rights reserved."
category = "Music"
short_description = "Tool to tag your audio library."
long_description = """
Tool to tag your audio library.
"""