[package]
name = "onetagger"
version = "1.7.0"
edition = "2021"
description = "App to tag your music library."
keywords = ["gui", "audio"]
categories = ["multimedia::audio"]

[dependencies]
log = "0.4"
anyhow = "1.0"
urlencoding = "2.1"

tao = { version = "0.33", features = ["rwh_05"] }
wry = { version = "0.42", features = ["devtools"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

onetagger-ui = { path = "../onetagger-ui" }
onetagger-tag = { path = "../onetagger-tag" }
onetagger-shared = { path = "../onetagger-shared" }
onetagger-tagger = { path = "../onetagger-tagger" }
onetagger-player = { path = "../onetagger-player" }
onetagger-autotag = { path = "../onetagger-autotag" }
onetagger-renamer = { path = "../onetagger-renamer" }
onetagger-playlist = { path = "../onetagger-playlist" }
onetagger-platforms = { path = "../onetagger-platforms" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

# MacOS specific
[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.16"
native-dialog = "0.9.0"


[package.metadata.bundle]
name = "OneTagger"
identifier = "com.marekkon5.onetagger"
icon = ["../../assets/32x32.png", "../../assets/128x128.png", "../../assets/128x128@2x.png", 
    "../../assets/icon.icns", "../../assets/icon.ico"]
version = "1.7.0"
resources = []
copyright = "Copyright (c) Marekkon5 2022. All rights reserved."
category = "Music"
short_description = "Tool to tag your audio library."
long_description = """
Tool to tag your audio library.
"""
